Mon Jul 21 21:17:30 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): fix normalisation bug.

Mon 20 Jul 17:04:44 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - more re-arrangement of aspect ratio
	* gtkoptions.c - set output digits reset old value
	
Mon Jul 21 15:59:43 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c gtkgame.h gtkmet.c: update filename of current MET
	  in options after loading a new one

Mon 20 Jul 13:30:41 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - quick hackery changing some hboxes to vboxes
	  to change the aspect ration of the rollout settings main page
	
Mon 20 Jul 11:32:04 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c - re-instate fix for initial position dice (lost 
	  when hand merging changes for orginal extendable rollouts)

Mon 20 Jul 09:49:08 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* progress.c - neater display of rank/jsds, better column label
	
Sun 19 Jul 22:01:18 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c - called SanityCheck with reversed board, so
	  it didn't deal with rollouts where one side has borne 
	  off.
	
Sun 19 Jul 14:49:33 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - fix limits on j.s.d. spinner, re-arrange
	  rollout general page (truncation pane above later
	  evaluations pane).
	
Sun 19 Jul 10:48:16 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c was losing the number of games rolled out.
	
Sat Jul 18 09:55:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* guile.c - adjust call to GeneralEvaluationR to match
	  new rollout progress functions.
	
Sat Jul 18 07:13:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - search the stack of grab owners for the
	  current caller of ResumeInput and trim the stack if 
	  found
	
Sat Jul 18 00:22:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>
